--- a/pom.xml
+++ b/pom.xml
@@ -109,8 +109,8 @@
                 </configuration>
                 <dependencies>
                     <dependency>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-testng</artifactId>
                         <version>3.5.0</version>
                     </dependency>
                 </dependencies>
